--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -265,15 +265,6 @@
 
 <!-- BEGIN DYNAMIC ACTIVITY CONTENT (Global View) -->
 <div ng-repeat="(level, nodes) in levels" class="levelBox">
-	
-	<!-- #43 Drag target must not have any angular bound data inside it -->
-	<!-- #43 Instead of text, put some appropriate background image to indicate user an drag to here -->
-    <!--
-	<div id="{{$parent.$index+1}}-{{levelPosition}}" ng-repeat="levelPosition in positionsPerLevel"
-		class="lvl-target dropzone" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">
-			Drop Zone
-	</div>
-	-->
     <div id="{{node.node_id}}-{{node.type}}-{{node.level}}-{{node.position}}" ng-repeat="node in nodes" x-lvl-draggable="true" ng-class="getBoxClass(node)" class="dropBox" >
         <!-- If it's a group:  -->
         <div ng-show="node.children" class="groupName bigHeight">{{ node.node_name }}</div>
@@ -281,13 +272,15 @@
         <!-- Children are also in levels: Create unstyled div for each level -->
         <div ng-repeat="(childLevel, subChildren) in node.children" class="levelBoxChild">
             <div ng-repeat="child in subChildren" ng-class="getGroupBoxClass(child)" class="dropBox">
-            <!-- TODO: Children in a group will require different handling for drag-drop -->	
             <!-- TOP DROP ZONE BORDER-->
-                <div id="{{node.node_id}}-top" class="topDrop lvl-target" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
+                <div id="{{child.group_id}}-{{child.group_child_id}}-{{child.group_child_type}}-{{child.level}}-{{child.position}}-top" 
+                	class="topDrop lvl-target" x-lvl-drop-target="true" x-on-drop="droppedGroup(dragEl, dropEl)"></div>
                 <!-- LEFT DROP ZONE BORDER-->
-                <div id="{{node.node_id}}-left" class="leftDrop lvl-target" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
+                <div id="{{child.group_id}}-{{child.group_child_id}}-{{child.group_child_type}}-{{child.level}}-{{child.position}}-left" 
+                	class="leftDrop lvl-target" x-lvl-drop-target="true" x-on-drop="droppedGroup(dragEl, dropEl)"></div>
                 <!-- RIGHT DROP ZONE BORDER-->
-                <div id="{{node.node_id}}-right" class="rightDrop lvl-target" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
+                <div id="{{child.group_id}}-{{child.group_child_id}}-{{child.group_child_type}}-{{child.level}}-{{child.position}}" 
+                	class="rightDrop lvl-target" x-lvl-drop-target="true" x-on-drop="droppedGroup(dragEl, dropEl)"></div>
                 <div class="tools topUp1">
                     <a class="edit moveLeft" ng-href="#"><i class="icon-edit icon-white"></i> </a>
                     <a class="delete moveRight" ng-href="#"><i class="icon-remove icon-white"></i> </a>
@@ -309,7 +302,8 @@
                     </div>
                 </a>
                 <!-- BOTTOM DROP ZONE BORDER-->
-                <div id="{{node.node_id}}-bottom" class="bottomDrop lvl-target" x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)"></div>
+                <div id="{{child.group_id}}-{{child.group_child_id}}-{{child.group_child_type}}-{{child.level}}-{{child.position}}-bottom" 
+                	class="bottomDrop lvl-target" x-lvl-drop-target="true" x-on-drop="droppedGroup(dragEl, dropEl)"></div>
             </div>
         </div>
         <!-- End Children -->
