#43 make level drop targets

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -9,6 +9,8 @@ F5F4ED = light grey
 ACE500 = green
 =================== */
 
+/* Drag and Drop
+===================== */
 .lvl-over {
 	border: 2px dashed black !important;
 }
